# bicep

./: .gitignore  CLAUDE.md  Dockerfile  Pipfile  README.md  docker-compose.yml  local.sh  pyproject.toml
bicepRESTful/: crud.py  database.py  main.py  models.py  schemas.py
config/: database_config.ini
src/main/: __main__.py
src/main/config/: config.py  database_config.ini
src/main/http/: endpoints.py  endpointsLogic.py
src/main/model/: model.py  responseModel.py  table.py
src/test/: test_endpoints.py
