[tool.poetry]
name = "bq-api-python"
version = "0.1.0"
description = "API for uploading to bigquery"
authors = ["solomoncotton <solcotton@live.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
fastapi = "^0.62.0"
pydantic = "^1.7.3"
uvicorn = "^0.13.0"
SQLAlchemy = "^1.3.20"
pandas = "^1.1.5"
python-multipart = "^0.0.5"
simplejson = "^3.17.2"
psycopg2 = "^2.8.6"
configparser = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
