[tool.poetry]
name = "bq-api-python"
version = "0.1.0"
description = "API for uploading to bigquery"
authors = ["solomoncotton <solcotton@live.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = ">=0.115"
pydantic = ">=2.0"
uvicorn = ">=0.34"
pandas = ">=2.0"
python-multipart = ">=0.0.9"
simplejson = ">=3.19"
psycopg2-binary = ">=2.9"
configparser = ">=5.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-mock = ">=3.12"
httpx = ">=0.27"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["src/test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
